# TDAtaframe

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: CI.yml  install_libtorch_linux_cpu.sh  install_libtorch_linux_cuda.sh  install_libtorch_macsilicon.sh  mac-debug.yml  test_installation.yml
patina-python-lib/patina/: __init__.py  params.py
patina-python-lib/patina/alignment/: __init__.py  queries.py  register.py
patina-python-lib/patina/wect/: __init__.py  queries.py  register.py
python-lib/tdataframe/: __init__.py  _torch.py  params.py  utils.py
python-lib/tdataframe/alignment/: __init__.py  queries.py  register.py
python-lib/tdataframe/building/: __init__.py  descriptors.py
python-lib/tdataframe/ect/: __init__.py  queries.py  register.py
python-lib/tdataframe/loading/: __init__.py  graphs.py  loader.py  meshes.py
python-lib/tdataframe/retrieval/: __init__.py  metrics.py  queries.py
python-lib/tdataframe/wect/: __init__.py  queries.py  register.py
scripts/: ci_watch.py  wheel_install_test.py
src/: complex.rs  complex_interpolation.rs  complex_mapping.rs  complex_opt.rs  complex_tensor.rs  expressions.rs  io.rs  lib.rs  tensorwect.rs  utils.rs  wect.rs  wect_interface.rs
tests/: test_building.py  test_degen_wect.py  test_loading.py  test_queries.py  test_retrieval.py
tests/test_data/graphml/: non-overlapping_edge.graphml  overlapping_edge.graphml  patch_0_12_size_500m.graphml  patch_0_9_size_500m.graphml
