[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[lib]
name = "patina"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "^0.42", features=["nightly", "performant", "lazy", "serde", "ndarray", "polars-ops", "dtype-array", "dtype-struct"]}
polars-arrow = { version = "^0.42"}
pyo3 = { version = "^0.22.2", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "^0.16.1", features = ["derive", "dtype-array", "dtype-struct", "lazy"] }
serde = { version = "*", features = ["derive"]}
num-traits = { version = "*" }
rand = { version = "*" }
ndarray = {version = "0.15.6"}
tch = {git = "https://github.com/LaurentMazare/tch-rs", rev="a4e9362e4acbbde54ab9503ab9e37a10835e7547"}
faer = {version = "^0.19.0", features=["rayon"]}
faer-ext = {version = "0.2.0", features=["ndarray"]}


[profile.dev.package.faer]
opt-level = 3

[features]
