[package]
name = "TDAtaframe"
version = "0.4.3"
edition = "2021"

[lib]
name = "tdataframe"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "^0.48", features=["nightly", "performant", "serde", "polars-ops", "dtype-array", "dtype-struct", "ndarray"]}
polars-arrow = { version = "^0.48"}
pyo3 = { version = "^0.24.2", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "^0.21.0", features = ["derive", "dtype-array", "dtype-struct"] }
serde = { version = "*", features = ["derive"]}
num-traits = { version = "*" }
rand = { version = "*" }
ndarray = {version = "0.16.1"}
tch = {version = "^0.20"}
faer = {version = "^0.20", features=["rayon"]}
faer-ext = {version = "^0.4.1", features=["ndarray"]}
itertools = "0.13.0"
cudarc = { version = "0.12.1", features = ["cuda-12040"] }
faer-traits = "0.21.0"
faer-entity = "0.20.1"

[target.x86_64-unknown-linux-gnu]
linker = "gcc"

[profile.dev.package.faer]
opt-level = 3

[toolchain]
channel = "nightly"
